# cpe_project

./: .travis.yml  CMakeLists.txt  package.xml
cfg/: Simple3Data.cfg
data/: README.md  backup_train_plane.csv  data_train_z.csv  project_4_1_3_sample.csv
include/: learn_center.hpp  learn_moment_inertia.hpp  listen_overview.hpp  observer.hpp  train_model.hpp  vision.hpp
msg/: Project.msg
parameter/: bottom.yaml  front.yaml  viscosity_c.txt  viscosity_k.txt
scripts/: forward.py  subject_3_3_pitch.py  subject_3_3_roll.py  subject_3_3_yaw.py
src/: learn_moment_inertia.cpp  learn_moment_inertia_model.cpp  listen_overview.cpp  observer.cpp  observer_model.cpp  purpose_3_3.cpp  vision_bottom.cpp
src/learn_center/: learn_center.cpp  learn_center_model.cpp
src/learn_moment/: learn_moment_inertia.cpp  learn_moment_inertia_model.cpp
src/model/: center_function.cpp  train_x.cpp  train_y.cpp  train_z.cpp
src/observer/: observer.cpp  observer_gradient.cpp  observer_limit.cpp  observer_model.cpp  observer_update.cpp
src/vision/: vision_bottom.cpp  vision_front.cpp
